<resources>
    <string name="app_name">Sonuto</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_post_status">Post Status</string>
    <string name="basic">Basics</string>
    <string name="info">Info</string>
    <string name="contact">Contact</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="country">Country:</string>
    <string name="gender">Gender:</string>
    <string name="dob">Date Of Birth:</string>
    <string name="scu">School/College/University:</string>
    <string name="occupation">Occupation:</string>
    <string name="employer">Employer:</string>
    <string name="telephone">Telephone:</string>
    <string name="email">Email:</string>
    <string name="skype_name">Skype Name:</string>
    <string name="twitter">Twitter:</string>
    <string name="facebook">Facebook:</string>
    <string name="linkedIn">LinkedIn:</string>
    <string name="home_town">Home Town:</string>
    <string name="about_me">About me:</string>
	<string name="signIn">Sign In</string>
	<string name="change_pass">Change Password</string>
	<string name="label_confirmation_code"><u>Confirmation Code</u></string>
    <string name="member_reg_Title"><u><b>"What's your name?"</b></u></string>
    <string name="name_setting"><u><b>"Change your name?"</b></u></string>
    <string name="email_setting"><u><b>"Change your email?"</b></u></string>
    <string name="reg_Title">Using your real name allows friends to connect and provides a better experience</string>
    <string name="reg_first_name">First Name</string>
    <string name="reg_last_name">Last Name</string>
    <string name="button_text_member_reg">Continue</string>
    <string name="sign_in_text">Sign in</string>
    <string name="member_reg_Title_for_password"><u>Create a password</u></string>
    <string name="reg_pass_text">Enter a combinations of al least 8 characters.Use letters, digit, punctuations to create a strong password</string>
    <string name="reg_password">Password</string>
    <string name="member_reg_Title_for_email"><u>Enter your e-mail address</u></string>
    <string name="reg_email_text">"You'll use your email address to login"</string>
    <string name="reg_email">Email</string>
    <string name="member_profile_setting_interest"><u>"Select your interests from the chart"</u></string>
    <string name="str_tv_title">AChartEngine </string>
    <string name="member_reg_Title_for_gender"><u>"What's your gender?"</u></string>
    <string name="title_for_gender"><u>"Change your gender?"</u></string>
    <string name="save_and_continue">Save and Continue</string>
    <string name="save">Save</string>
    <string name="member_reg_profile_info"><u>"Enter your profile information"</u></string>
    <string name="reg_country">Country</string>
    <string name="reg_education">School/Collage/University</string>
    <string name="reg_employe">Employe</string>
    <string name="reg_occupation">Occupation</string>
    <string name="member_reg_profile_pic"><u>"Add a profile picture"</u></string>
    <string name="member_profile_setting_skip"><u>"Skip this step"</u></string>
    <string name="email_check_conf">Check your E-mail</string>
	<string name="email_check_conf_code">We send you an e-mail with a confirmation code.Enter it below to complete your registration.</string>
	<string name="reg_conf_code">Enter your confirmation code</string>
	<string name="reg_question_set">Set a Question for security perpose </string>
	<string name="question_prompt">Select a question</string>
    <string-array name="question_list">
        <item>What is your nick name?</item>
        <item>Who was your first teacher?</item>
        <item>Who was your first friend?</item>
    </string-array>
    <string name="member_setting_birthday_title"><u><b>When your birthday?</b></u></string>
    <string name="member_setting_upload_pic_title"><u>Upload photo</u></string>
    <string name="bp_registration_title">Business Profile Registration</string>
    <string name="business_description">Select and add information to create a profile for your business </string>
    <string name="business_category_label">Business category : </string>
    <string name="business_type_label">Business type : </string>
    <string name="business_name_label">Business name </string>
    <string name="business_street_label">Street name</string>
    <string name="address_label">Address</string>
    <string name="city_label">City/Town </string>
    <string name="business_country_label">Country</string>
    <string name="zip_label">Post/Zip code</string>
    <string name="business_telephone_label">Telephone</string>
    <string name="business_email_label">E-mail</string>
    <string name="business_website_label">Website</string>
    <string name="business_hour_label">Opening times</string>
    <string name="business_registered_com_no_label">Registred company number</string>
    <string name="bp_description_title">Description...</string>
    <string name="bp_description_label">Add your business description :</string>
    <string name="forget_password_heading">Forget Password?</string>
    <string name="forget_password_title">Please enter your email so we can send you an email to reset your password.</string>
    <string name="forget_password_email">Email</string>
    <string name="forget_password_question_answare">Answare</string>
    <string name="forget_password_email_check">Check your E-mail</string>
    <string name="forget_password_code">Check your E-mail</string>
    <string name="forget_password_email_check_title">We send you an e-mail with a confirmation code.Enter it below to continue to reset your password.</string>
    <string name="forget_password_send_email">We have send you an email to:</string>
    <string name="forget_password_send_email_error">I did not receive a code</string>
    <string name="cancel_btn">Cancel</string>
    <string name="not_my_account_btn">Not My account</string>
    <string name="forget_pass_continue_btn">Continue</string>
    <string name="reset_password_link">Email me a link to reset a password</string>
    <string-array name="business_category_arrays">
        <item>SIngle</item>
        <item>Multiple</item>
        <item>Group of com</item>
    </string-array>
    <string-array name="business_profile_type_arrays">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
    </string-array>
    <string name="sports_prompt">Select sports</string>
    <string-array name="sports_list">
        <item>Football</item>
        <item>Cricket</item>
        <item>BasketBall</item>
        <item>Rugby Union</item>
    </string-array>
    <string name="tournament_prompt">Select tournament</string>
    <string-array name="tournament_list">
        <item>Chanpion League</item>
        <item>La League</item>
        <item>Premier</item>
    </string-array>
    <string name="group_prompt">Select Group</string>
    <string-array name="group_list">
        <item>Followers</item>
        <item>Anyone</item>
        <item>Selected group</item>
    </string-array>
    <string name="seettings_account_title"><u>General Information</u></string>
    <string name="settings_account_gender_label">Gender: </string>
    <string name="settings_account_dob_label">Date Of Birth: </string>
    <string name="settings_account_Country_label">Country: </string>
    <string name="settings_account_tome_town_label">Home Town: </string>
    <string name="settings_account_store_address_label">Store Address: </string>
    <string name="settings_account_clg_uni_label">College/University: </string>
    <string name="settings_account_emp_label">Employer: </string>
    <string name="settings_account_occupation_label">Occupation: </string>
    <string name="settings_account_aboutme_label">About me: </string>
    <string name="seettings_account_information_title"><u>Account Information</u></string>
    <string name="settings_account_ok_btn">OK</string>
    <string name="sample_upload_img">This is sample image for img upload</string>
    <string name="gender_male_img">Male</string>
    <string name="gender_female_img">Female</string>
    <string name="title_activity_member_registration1">MemberRegistration1Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_registration_step1">RegistrationStep1Activity</string>
    <string name="emailRequired">Email Required!</string>
    <string name="validEmail">Email Should be valid!</string>
    <string name="passwordRequired">Password Required!</string>
    <string name="passwordLengthRequired">Password should be atleast 4 character!</string>
    <string name="emailNotExist">Email Not Exist!</string>
    <string name="emailAndPassNotMatch">Email and Password not match!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="title_activity_edit_user_profile">Edit Profile</string>
    <string name="title_activity_user_info">User Info</string>
    <string name="title_activity_registration1">Registration1Activity</string>
    <string name="firstnameRequired">Firstname Required!</string>
    <string name="lastnameRequired">Lastname Required!</string>
    <string name="title_activity_member_setting">Add Your Interest</string>
    <string name="title_activity_genger_selection">Select Gender</string>
    <string name="title_activity_google_apitest">GoogleAPITestActivity</string>
    <string name="title_activity_forget_pass">Forget Password</string>
    <string name="title_activity_forget_pass_email">Check User Email</string>
    <string name="title_activity_change_pass">Change Password</string>
    <string name="hometwonRequired">Hometwon Required!</string>
    <string name="aboutMeRequired">About Me Required!</string>
    <string name="title_activity_user_status_post">Post Status</string>
    <string name="title_activity_account_settings">Account Settings</string>
    <string name="title_activity_general_settings">General Settings</string>
    <string name="title_activity_name_settings">Name Settings</string>
    <string name="title_activity_email_settings">Email Settings</string>
    <string name="title_activity_account_info_settings">Account Information</string>
    <string name="title_activity_privecy_settings">Privecy Settings</string>
    <string name="title_activity_profile_information">Profile Information</string>
    <string name="countyRequired">Country Required!</string>
    <string name="institutionRequired">Educational Institution Required!</string>
    <string name="occupationRequired">Occupation Required!</string>
    <string name="employeRequired">Employe Required!</string>
    <string name="title_activity_add_photo">Add your photo</string>
    <string name="title_activity_news_feed">News Feed</string>
    <string name="businessCategoryRequired">Please select a business category!</string>
    <string name="businessTypeRequired">Please select a business type!</string>
    <string name="bmi_select_gender_lebel">Gender :</string>
    <string name="bmi_male_btn">Male</string>
    <string name="bmi_female_btn">Female</string>
    <string name="bmi_select_unit_lebel">Measure Unit: </string>
    <string name="bmi_metric_btn">Metric</string>
    <string name="bmi_imperial_btn">Imperial</string>
    <string name="bmi_result_label">Your BMI is : </string>
    <string name="bmi_category_label">Your BMI category : </string>
    <string name="bmi_calculate_btn">Calculate </string>
    <string name="EmptyString"></string>
    <string name="blog_title_hint">Enter a title here for your Blog</string>
    <string name="blog_main_text_hint">Enter your blog text here</string>
    <string name="blog_pic">Blog picture</string>
	<string name="blog">Save</string>
</resources>