<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="." >

    <LinearLayout
        android:id="@+id/create_blog_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            android:text="@string/forget_password_heading"
            android:textColor="#00acea"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            android:text="@string/forget_password_title"
            android:textSize="15sp" />


        
        <EditText
                android:id="@+id/txtforgetPassEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="10dip"
                android:background="@drawable/backwithborder"
                android:hint="@string/forget_password_email"
                android:singleLine="true" />

        <Spinner
            android:id="@+id/spinner_Month"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dip"
            android:entries="@array/sports_list"
            android:prompt="@string/sports_prompt" />
        
        <EditText
                android:id="@+id/txtforgetPassQuestionAns"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="5dip"
                android:background="@drawable/backwithborder"
                android:hint="@string/forget_password_question_answare"
                android:singleLine="true" />


        <Button
            android:id="@+id/btnforgetPass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="60dip"
            android:background="@drawable/button"
            android:text="@string/button_text_member_reg"
            android:textSize="15sp" />

        <Button
            android:id="@+id/link_to_register2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="20dip"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/sign_in_text"
            android:textColor="#7f7f7f"
            android:textSize="15sp" />
    </LinearLayout>

</ScrollView>