<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="." >

    <LinearLayout
        android:id="@+id/create_blog_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:text="@string/forget_password_email_check"
            android:textColor="#00acea"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/forget_password_email_check_title"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/txtforgetPassCode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/backwithborder"
            android:hint="@string/forget_password_code"
            android:padding="10dp"
            android:singleLine="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dip"
            android:gravity="center"
            android:text="@string/forget_password_send_email"
            android:textColor="#7f7f7f"
            android:textSize="15sp" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="#7f7f7f"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
             >

            <Button
                android:id="@+id/btnforgetPassContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/button_text_member_reg"
                android:textSize="15sp" />


            <Button
                android:id="@+id/btnforgetPassCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/cancel_btn"
                android:layout_weight="1"
                android:textSize="15sp" />
        </LinearLayout>
        
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/forget_password_send_email_error"
            android:textSize="15sp" />

        <Button
            android:id="@+id/link_to_register2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/sign_in_text"
            android:textColor="#7f7f7f"
            android:textSize="15sp" />
    </LinearLayout>

</ScrollView>