<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="." >

    <LinearLayout
        android:id="@+id/create_blog_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <Spinner
            android:id="@+id/spinner_Month"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:layout_gravity="center"
            android:entries="@array/sports_list"
            android:prompt="@string/sports_prompt" />        

        <EditText
            android:id="@+id/blogTitleEdtTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:layout_marginTop="5dip"
            android:hint="@string/blog_title_hint"
            android:inputType="textMultiLine"
            android:background="@drawable/backwithborder"
            android:lines="5"
            android:singleLine="true" />


        <EditText
            android:id="@+id/blogMainTextEdtTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:layout_marginTop="5dip"
            android:background="@drawable/backwithborder"
            android:hint="@string/blog_main_text_hint"
            android:inputType="textMultiLine"
            android:lines="5"
            android:singleLine="true" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="30dip"
            android:text="@string/blog_pic"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#00acea" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:background="@drawable/image_border"
            android:contentDescription="@string/sample_upload_img"
            android:onClick="browseFile"
            android:src="@drawable/user_female" />

        <TextView
            android:id="@+id/textViewMessage"
            android:layout_width="144dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.08"
            android:text="" />

        <Button
            android:id="@+id/btnBusinessRegDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/button"
            android:onClick="bpRegDescriptionStep"
            android:text="@string/blog" />
    </LinearLayout>

</ScrollView>